<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pedido">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/larana"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:background="@color/azul"
            android:textColor="@color/white"
            android:text="@string/Lanche" />

        <RadioGroup
            android:id="@+id/lanches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbCheddar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cheddar" />

            <RadioButton
                android:id="@+id/rbBacon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bacon" />

            <RadioButton
                android:id="@+id/rbSalada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Salada" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/Bebida"
            android:background="@color/azul"
            android:textColor="@color/white"/>

        <RadioGroup
            android:id="@+id/bebidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbRefrigerante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Refrigente" />

            <RadioButton
                android:id="@+id/rbSuco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Suco"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/Nome"
                android:background="@color/azul"
                android:textColor="@color/white"/>

        </RadioGroup>

        <EditText
            android:id="@+id/editTextTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nome"
            android:inputType="text"
            android:text="" />

        <Button
            android:id="@+id/buttonFinalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul"
            android:text="Finaliza Pedido" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>